--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,62 +1,76 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css");
 
-*{text-decoration: none !important;}
-#adminNav{
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
+* {
+  text-decoration: none !important;
 }
-#adminNav a{color: #fff;}
-
-.footerMenu{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+#adminNav {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+#adminNav a {
+  color: #fff;
 }
 
-.bi{
-    font-size: 24px;
-    color: #393939;
+.footerMenu {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
-.social{
-    display: flex;
-    column-gap: 15px;
+.bi {
+  font-size: 24px;
+  color: #393939;
 }
 
-#footer, #footer a, #footer .bi{
-    color:#fff;
+.social {
+  display: flex;
+  column-gap: 15px;
 }
 
-.banner{
-    padding:150px 0px;
-    background-color: #e2e3e5;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    background-position: center center !important;
+#footer,
+#footer a,
+#footer .bi {
+  color: #fff;
 }
 
-.btn-purple, .bg-purple{
-    background-color: #6c55f9;
-    color:#fff;
+.banner {
+  padding: 150px 0px;
+  background-color: #e2e3e5;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  background-position: center center !important;
 }
 
-.btn-purple:hover{
-    background-color: #6048ff;
-    color:#fff;
+#mainBanner img {
+  width: 65% !important;
+  border-radius: 32px;
 }
 
-.text-purple{color: #6c55f9;}
-
-.flexList{
-    display: flex;
-    flex-direction: column;
+.btn-purple,
+.bg-purple {
+  background-color: #6c55f9;
+  color: #fff;
 }
 
-#pricing .list-group-item{
-    border:none;
+.btn-purple:hover {
+  background-color: #6048ff;
+  color: #fff;
 }
 
-.kaanksss{
-    padding:100px 0px;
+.text-purple {
+  color: #6c55f9;
+}
+
+.flexList {
+  display: flex;
+  flex-direction: column;
+}
+
+#pricing .list-group-item {
+  border: none;
+}
+
+.kaanksss {
+  padding: 100px 0px;
 }
